<resources>
    <string name="app_name">SportBookingApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Welcome to SportBooking!</string>
    <string name="sports_field_image">sports field image</string>
    <string name="register">Register</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect!</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="loginButton">Login</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="back">Back</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="home">Home</string>
    <string name="reservation_status">Reservation status</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="show_password">Show password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="textview">TextView</string>
    <string name="personal_data">Personal Data</string>
    <string name="confirm">Confirm</string>
    <string name="please_insert_your_email">Please insert your email</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="volleyball">Volleyball</string>
    <string name="soccer_field_image">soccer_field_image</string>
    <string name="spinner_prompt_text">Select an hour</string>
    <string name="starting_hour">Starting hour</string>
    <string name="ending_hour">Ending hour</string>
    <string name="total_price">Total price: </string>
    <string name="price_text">Price: %1$s lei</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_to_ball_arena">Welcome to \nBall Arena!</string>
    <string name="reservations">Reservations</string>
    <string name="save">Save</string>
    <string name="welcome_guest">Welcome, Guest!</string>
</resources>