<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="@android:dimen/app_icon_size"
    tools:context=".Registration">

    <TextView
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/back"
        android:paddingBottom="6dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/backgroundRegistrationImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sports_field_image"
        android:cropToPadding="true"
        android:scaleType="fitXY" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEmailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPasswordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:hint="@string/first_name"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:hint="@string/last_name"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneNumberTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:hint="@string/phone_number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/additionalMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="24dp"
        android:textAlignment="center"
        android:textColor="#F80404"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/registrationProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_button"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
</LinearLayout>